style hover row liste étudiante

--- a/client/src/assets/styles/style.css
+++ b/client/src/assets/styles/style.css
@@ -39,8 +39,9 @@ Tableau Liste étudiante
     background-color: #dddddd;
 }
 
-#list_student tr:hover {
+#list_student tr:hover:not(thead tr) {
     cursor: pointer;
+    background-color: #fc8d3369;
 }
 
 #list_student tr:active {
