Finish course name edit form & fix css

--- a/client/src/assets/styles/style.css
+++ b/client/src/assets/styles/style.css
@@ -1,8 +1,16 @@
 /* ==========================================================================
+   Page web
+   ========================================================================== */
+
+body {
+    min-width: 320px;
+}
+
+/* ==========================================================================
    Textes
    ========================================================================== */
 
-   * {
+* {
     color: #0169B0;
 }
 
