Envoie courriel lors de l'activation du compte

--- a/client/src/assets/styles/style.css
+++ b/client/src/assets/styles/style.css
@@ -64,7 +64,7 @@ Tableau Liste étudiante
     border: 1px solid rgba(0, 0, 0, 0.12);
 }
 
-#loginForm, #recoverForm {
+#loginForm, #recoverForm, #resetPasswordForm {
     margin: auto;
     width: 30%;
 }
@@ -78,7 +78,7 @@ Tableau Liste étudiante
     margin: 5px;
 }
 
-#login_alert, #recover_alert {
+#login_alert, #recover_alert,  #resetPassword_alert {
     position: absolute;
     visibility: hidden;
     width: 450px;
