--- a/client/src/assets/styles/style.css
+++ b/client/src/assets/styles/style.css
@@ -1,99 +1,29 @@
-/* ==========================================================================
-   Page web
-   ========================================================================== */
+/********************************/
+/* Éléments généraux            */
+/********************************/
+                                        
+    body    
+    { min-width: 320px; }               /* Largeur minimal pour le body */
 
-body {
-    min-width: 320px;
-}
+    *
+    { color: #0169B0; }               /* Couleur par défaut du texte */
 
-/* ==========================================================================
-   Textes
-   ========================================================================== */
+    h1, h2, h3, h4, h5, h6      
+    { text-align: center; }             /* Aligne les titres */
 
-* {
-    color: #0169B0;
-}
+    h1, h2  
+    { color: #FC8D33; }               /* Couleur par défaut des titres principaux et secondaires */
 
-/* Titres
-========================================================================== */
-h1, h2, h3, h4, h5, h6 {
-    text-align: center;
-}
 
-h1, h2 {
-    color: #FC8D33;
-}
 
-.v-app-bar__nav-icon, #disconnect_button {
-    position: absolute;
-}
+/********************************/
+/* Importation des autres       */
+/* feuilles CSS                 */
+/********************************/
+    @import './student_list.css';       /* Styles pour la liste étudiante */
+    @import './navigation_menu.css';    /* Styles pour le menu de navigation */
+    @import './login.css';              /* Styles pour le login, la réinitialisation du mot de passe */
 
-#disconnect_button {
-    right: 5px;
-}
 
-.v-application--is-ltr .v-toolbar__content > .v-btn.v-btn--icon:first-child + .v-toolbar__title, .v-application--is-ltr .v-toolbar__extension > .v-btn.v-btn--icon:first-child + .v-toolbar__title {
-    padding: 0;
-}
-
-/* ==========================================================================
-Tableau Liste étudiante
-========================================================================== */
-#list_student thead span {
-    font-size: large;
-}
-
-#list_student tr:nth-of-type(odd) {
-    background-color: #FFFFFF;
-}
-
-#list_student tr:nth-of-type(even) {
-    background-color: #dddddd;
-}
-
-#list_student tr:hover:not(thead tr), #list_supervisor tr:hover:not(thead tr) {
-    cursor: pointer;
-    background-color: #fc8d3369;
-}
-
-#list_student tr:active {
-    cursor: grabbing;
-}
-
-.outlined {
-    border: 1px solid rgba(0, 0, 0, 0.12);
-}
-
-#loginForm, #recoverForm, #resetPasswordForm {
-    margin: auto;
-    width: 30%;
-}
-
-#recoverForm div{   
-    display: flex;
-    justify-content: space-around;
-}
-
-#recoverForm div button {
-    margin: 5px;
-}
-
-#login_alert, #recover_alert,  #resetPassword_alert {
-    position: absolute;
-    visibility: hidden;
-    width: 450px;
-    top: 50px;
-    left: calc(50% - (450px / 2));
-    z-index: 1;
-}
-
-#filter {
-    text-align:left;
-    text-decoration: underline;
-    width:fit-content;
-}
-
-#filter:hover {
-    color: #FC8D33;
-    cursor: pointer;
-}
+    .outlined 
+    { border: 1px solid rgba(0, 0, 0, 0.12); }
