--- a/client/src/assets/styles/importation.css
+++ b/client/src/assets/styles/importation.css
@@ -1,18 +1,22 @@
+
+
+#import_card {
+    max-width: 700px;
+    margin: auto;
+}
+
 #import_button {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
     padding: 0;
+    max-width: 100%;
 }
 
 #import_button > div:first-of-type {
-    margin-left: 150px;
-    padding: 0;
-}
-
-#import_button > div:last-of-type {
-    margin-right: 150px;
+    max-width: 70%;
+    margin-left: 26px;
 }
 
 #import_button > div > div {
@@ -30,6 +34,7 @@
     display: flex;
     justify-items: center;
     align-items: center;
+    max-width: 150px;
 }
 
 #select_session input {
